--- a/Makefile-linux-gnu
+++ b/Makefile-linux-gnu
@@ -26,11 +26,11 @@ build/Icepack.$(PLATFORM).$(COMPILER).debug/libIcepack.a:
 build/MOM6.$(PLATFORM).$(COMPILER).debug/libMOM6.a: build/FMS.$(PLATFORM).$(COMPILER)/libFMS.a build/Icepack.$(PLATFORM).$(COMPILER).debug/libIcepack.a
 	mkdir -p build/MOM6.$(PLATFORM).$(COMPILER).debug
 	(cd build/MOM6.$(PLATFORM).$(COMPILER).debug/; rm -f path_names; ../../src/mkmf/bin/list_paths -l \
-	../../src/MOM6/config_src/{dynamic_symmetric,coupled_driver,external/GFDL_ocean_BGC,external/ODA_hooks}  \
+	../../src/MOM6/config_src/{memory/dynamic_symmetric,drivers/FMS_cap,infra/FMS1,external/GFDL_ocean_BGC,external/ODA_hooks}  \
         ../../src/MOM6/{src/*,src/*/*,src/*/*/*} ../../src/SIS2/config_src/dynamic_symmetric ../../src/SIS2/src/* \
 	../../src/icebergs/* ../../src/ice_param  ;\
 	../../src/mkmf/bin/mkmf -t ../../src/mkmf/templates/$(PLATFORM)-$(COMPILER).mk -o \
-	'-I/usr/local/include -I../../src/MOM6/.testing/deps/FMS/include -I../FMS.$(PLATFORM).$(COMPILER) -I../Icepack.$(PLATFORM).$(COMPILER).debug' \
+	'-I/usr/local/include  -I../FMS.$(PLATFORM).$(COMPILER) -I../Icepack.$(PLATFORM).$(COMPILER).debug' \
 	-p libMOM6.a -l '-L../FMS.$(PLATFORM).$(COMPILER) -lfms -L../Icepack.$(PLATFORM).$(COMPILER).debug -lIcepack' -c \
 	"-Duse_libMPI -Duse_netCDF -DSPMD -DLAND_BND_TRACERS -Duse_AM3_physics " path_names; \
 	source ../../build/env/$(PLATFORM)-$(COMPILER); make  NETCDF=3 DEBUG=1 -j 8 libMOM6.a)
@@ -58,11 +58,11 @@ build/Icepack.$(PLATFORM).$(COMPILER).repro/libIcepack.a:
 build/MOM6.$(PLATFORM).$(COMPILER).repro/libMOM6.a: build/FMS.$(PLATFORM).$(COMPILER)/libFMS.a build/Icepack.$(PLATFORM).$(COMPILER).repro/libIcepack.a
 	mkdir -p build/MOM6.$(PLATFORM).$(COMPILER).repro
 	(cd build/MOM6.$(PLATFORM).$(COMPILER).repro/; rm -f path_names; ../../src/mkmf/bin/list_paths -l \
-	../../src/MOM6/config_src/{dynamic_symmetric,coupled_driver,external/GFDL_ocean_BGC,external/ODA_hooks}  \
+	../../src/MOM6/config_src/{memory/dynamic_symmetric,drivers/FMS_cap,infra/FMS1,external/GFDL_ocean_BGC,external/ODA_hooks}  \
         ../../src/MOM6/{src/*,src/*/*,src/*/*/*} ../../src/SIS2/config_src/dynamic_symmetric ../../src/SIS2/src/* \
 	../../src/icebergs/* ../../src/ice_param  ;\
 	../../src/mkmf/bin/mkmf -t ../../src/mkmf/templates/$(PLATFORM)-$(COMPILER).mk -o \
-	'-I/usr/local/include -I../../src/MOM6/.testing/deps/FMS/include -I../FMS.$(PLATFORM).$(COMPILER) -I../Icepack.$(PLATFORM).$(COMPILER).repro' \
+	'-I/usr/local/include  -I../FMS.$(PLATFORM).$(COMPILER) -I../Icepack.$(PLATFORM).$(COMPILER).repro' \
 	-p libMOM6.a -l '-L../FMS.$(PLATFORM).$(COMPILER) -lfms -L../Icepack.$(PLATFORM).$(COMPILER).repro -lIcepack' -c \
 	"-Duse_libMPI -Duse_netCDF -DSPMD -DLAND_BND_TRACERS -Duse_AM3_physics " path_names; \
 	source ../../build/env/$(PLATFORM)-$(COMPILER); make  NETCDF=3 REPRO=1 -j 8 libMOM6.a)
